# cross-contract-example

./: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  package-lock.json  package.json
contracts/demo-totals/: Cargo.toml  README.md
contracts/demo-totals/examples/: schema.rs
contracts/demo-totals/schema/: config.json  execute_msg.json  instantiate_msg.json  query_msg.json
contracts/demo-totals/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/dinner/: Cargo.toml  build.sh
contracts/dinner/examples/: schema.rs
contracts/dinner/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/dinner/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/whitelist-binary/: README.md
helpers/: cosmwasm-code.js  cosmwasm-code.ts  cosmwasm-init.js  cosmwasm-init.ts  tsconfig.json
